vrai fix post invisible

--- a/static/index.css
+++ b/static/index.css
@@ -3,5 +3,5 @@
 }
 
 .hidden {
-    display: none !important;
+    display: none ;
 }
